# listconfig

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: listconfig_linux_arm_imx28
listconfig/: __init__.py  __main__.py
