[project]
name = "listconfig"
version = '0.1.3'
authors = [
    {name = "Takumi Sueda", email = "puhitaku@gmail.com"}
]
description = "Convert .config into a human-readable config list with description and metadata"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "click-pathlib",
]

[project.scripts]
listconfig = "listconfig.__main__:main"

[project.urls]
Homepage = "https://github.com/puhitaku/listconfig"

[dependency-groups]
dev = [
  "black",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
