[metadata]
name = listconfig
version = attr: listconfig.__version__
url = https://github.com/puhitaku/listconfig
author = Takumi Sueda
author_email = puhitaku@gmail.com
license_file = LICENSE
description = Format .config → config list with description and metadata
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
  click
  click-pathlib
  kconfiglib

[options.entry_points]
console_scripts =
  listconfig = listconfig.__main__
